# CMakeList.txt : CMake project for CMake-dedication, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CMake-dedication "CMake-dedication.cpp" "CMake-dedication.h")

# TODO: Add tests and install targets if needed.
